[package]
name = "enet"
version = "0.2.3"
authors = ["Felix Rath <felixm.rath@gmail.com>"]
edition = "2018"
description = "High-level, rust-y bindings to the ENet library"
documentation = "https://www.docs.rs/enet"
homepage = "https://github.com/futile/enet-rs"
repository = "https://github.com/futile/enet-rs"
readme = "README.md"
keywords = ["network", "gamedev"]
categories = ["game-engines", "network-programming"]
license = "Apache-2.0 OR MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
enet-sys = "0.2.2"
failure = "0.1.5"
failure_derive = "0.1.5"

[dev-dependencies]
lazy_static = "1.3.0"
